--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       
       <section id="project" class="section dolor">
         <h1>Projects</h1>
-        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="C:\Users\prane\Desktop\STUDIES\iwp\portfolio\images\calculator.jpg" alt="Calculator"style="width:auto px;height:375px;padding:25px"></a>
-        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="C:\Users\prane\Desktop\STUDIES\iwp\portfolio\images\pc.jpg" alt="Calculator"style="width:auto px;height:375px;padding:25px"></a>
+        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="C:\Users\prane\Documents\GitHub\Iwp.github.io\images\calculator.jpg" alt="Calculator"style="width:auto px;height:375px;padding:25px"></a>
+        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="C:\Users\prane\Documents\GitHub\Iwp.github.io\images\pc.jpg" alt="Calculator"style="width:auto px;height:375px;padding:25px"></a>
       </div>
       <div>
       
