--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section id="about" class="section ipsum">
         <h1>About</h1>
      <div id="aboutme">
-        <p>I am pursuing Btech computer science at VIT Vellore. I am well known for my creative content creation and management.</p>
+        <p>I am pursuing Bhhhhhhtech computer science at VIT Vellore. I am well known for my creative content creation and management.</p>
         <p>I am passionate about the digital era the improvement of technology in making lives better. The digital world is developing with such force and such a pace that you can’t ban or control it. People want to be globally connected.</p>
     </div>  
     </section>
