--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
       <div>
       <section id="about" class="section ipsum">
         <h1>About</h1>
-     <div id="aboutme">
+     <div id="zuko">
         <p>I am pursuing Btech computer science at VIT Vellore. I am well known for my creative content creation and management.</p>
-        <p>I am passionate about the digital era the improvement of technology in making lives better. The digital world is developing with such force and such a pace that you can’t ban or control it. People want to be globally connected.</p>
+        <p>I am passionate about the digital era the improvement of technology in making lives better.</p>
+        <p> The digital world is developing with such force and such a pace that you can’t ban or control it.</p>
+        <p> People want to be globally connected.</p>
     </div>  
     </section>
       </div>
@@ -69,8 +71,8 @@
       
       <section id="project" class="section dolor">
         <h1>Projects</h1>
-        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="images\calculator.jpg" alt="Calculator"style="width:auto px;height:50vh;padding:25px"></a>
-        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="images\pc.jpg" alt="Calculator"style="width:auto px;height:50vh;padding:25px"></a>
+        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="images\calculator.jpg" alt="Calculator"style="width:auto vw;height:50vh;padding:25px"></a>
+        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="images\pc.jpg" alt="Calculator"style="width:auto vw;height:50vh;padding:25px"></a>
       </div>
       <div>
       
