--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
       
       <section id="project" class="section dolor">
         <h1>Projects</h1>
-        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="images\calculator.jpg" alt="Calculator"style="width:auto vw;height:50vh;padding:25px"></a>
-        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="images\pc.jpg" alt="Calculator"style="width:auto vw;height:50vh;padding:25px"></a>
+        <div class="pro">
+        <a href="https://codepen.io/MrPurple024/pen/VwzNGQW" target="_blank"><img src="images\calculator.jpg" alt="Calculator"style="width:40vw;padding:1vw"></a>
+        <a href="https://codepen.io/MrPurple024/pen/rNzbqxM" target="_blank"><img src="images\pc.jpg" alt="Calculator"style="width:40vw;height:auto;padding:1vw"></a>
+        </div>
       </div>
       <div>
       
